Fixed dropdown & text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,13 @@ h2 {
 
 #container {
     padding-top: 10px;
-    width: 1616px;
-    height: 909px;
+    width: 1600px;
+    height: 900px;
     margin: 0 auto;
+}
+
+#year {
+    display: inline;
+    float: none;
+    text-align: center;
 }
